# digipin-rs

./: .gitignore  API_CONTRACT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: rust-cd.yml  rust-ci.yml  scorecard.yml  sonarqube.yml
rust/digipin/: Cargo.toml
rust/digipin/src/: constants.rs  decode.rs  lib.rs  location.rs  normalize.rs
src/: constants.rs  decode.rs  encode.rs  errors.rs  lib.rs  location.rs  tests.rs  validation.rs
