[package]
name = "digipin-rs"
version = "0.1.0-alpha.16"
edition = "2024"
license = "Apache-2.0"
description = "Rust library for encoding and decoding DIGIPIN (Digital Postal Index Number)"
keywords = ["digipin", "postal", "gis", "address", "india"]
repository = "https://github.com/pranamphd/digipin"
documentation = "https://docs.rs/digipin-rs"
categories = ["encoding", "science::geo"]

[dependencies]
